# python-sdk

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  test_sdk.py
.github/workflows/: ci.yml
traffic_orchestrator/: __init__.py
traffic_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
