[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-orchestrator"
version = "2.1.0"
description = "Official Python client for Traffic Orchestrator license validation, management, and analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Traffic Orchestrator", email = "support@trafficorchestrator.com" }
]
keywords = ["licensing", "license-validation", "traffic-orchestrator", "api-client", "saas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "requests>=2.0.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://trafficorchestrator.com"
Documentation = "https://trafficorchestrator.com/docs/sdks/python"
Repository = "https://github.com/traffic-orchestrator/TO"
"Bug Tracker" = "https://trafficorchestrator.com/contact"

[tool.setuptools.packages.find]
include = ["traffic_orchestrator*"]
